Fix: button on small device fixes #17

--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,16 @@
 }
 .scroll-t-btn{
   position: fixed;
-  /* z-index: 10; */
+  bottom: 3%;
+  z-index: 10;
   background-color: #4CAF50; 
   border: none;
   color: white;
-  padding: 10px;
+  padding: 8px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 13px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px;
